<resources>
    <string name="app_name">Library</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="mailid">Mail ID</string>
    <string name="empty_list_text">No Records Found.</string>
    <string name="enter_title">Book Name</string>
    <string name="enter_desc">Description</string>
    <string name="add_record">Add book</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
</resources>
