<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/orange"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Admin LogIn"
            android:textSize="26dp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cls"
            android:layout_marginRight="10dp"
            android:background="@color/orange"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center_horizontal"
         android:layout_marginTop="30dp">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Log In "
             android:textSize="24dp"
             android:textColor="@color/orange"
             android:textStyle="bold|italic"/>


     </LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="20dp">


            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/username"
                android:layout_marginLeft="12sp"
                android:layout_marginRight="12sp"
                android:inputType="textPersonName"/>


            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:layout_marginLeft="12sp"
                android:layout_marginRight="12sp"
                android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_sumbit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/submit"
            android:background="@color/orange"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="end"
            android:layout_marginRight="12sp"
            android:layout_marginLeft="150dp"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>
</LinearLayout>